Bug 78501 - repaint problems when toggle between fullscreen and other clients
Summary: repaint problems when toggle between fullscreen and other clients
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium critical
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-09 19:55 UTC by U. Artie Eoff
Modified: 2014-05-13 18:44 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
video of issue (955.43 KB, video/webm)
2014-05-09 19:55 UTC, U. Artie Eoff
Details
weston 1.4 (2.03 MB, video/webm)
2014-05-09 20:07 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2014-05-09 19:55:19 UTC
Created attachment 98776 [details]
video of issue

When switching between a fullscreen "weston-fullscreen" client and non-fullscreen client (e.g. weston-terminal) weston exhibits bad repaint and flickering issues around the area outside the green box of weston-fullscreen client.  see attached video.

wayland (master) heads/master-0-g0f23b73
drm (master) libdrm-2.4.52-0-g46d451c
mesa (10.1) heads/10.1-0-g9e1eb6f
libva (master) libva-1.2.1-0-g88ed1eb
intel-driver (master) 1.2.2-0-g121e70d
cairo (1.12) heads/1.12-0-g59e2a93
libinput (master) heads/master-0-g97af5c3
weston (master) heads/master-0-gd8d4701


On weston 1.4, the flickering does not occur but the area outside the box does not repaint and toolbar ends up on top.
Comment 1 U. Artie Eoff 2014-05-09 20:07:54 UTC
Created attachment 98777 [details]
weston 1.4
Comment 2 Kristian Høgsberg 2014-05-09 23:24:35 UTC
commit c991513483ec448408be47dbf806c5b300de2b07
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Fri May 9 16:24:07 2014 -0700

    desktop-shell: Damage the black view when we remove it
    
    We should be using weston_view_unmap() here, or maybe just destroying the
    black view, but let's do a minimal, safe fix for the 1.5 release.
    
    Fixes: https://bugs.freedesktop.org/show_bug.cgi?id=78501


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.